--- a/_layouts/legalese.html
+++ b/_layouts/legalese.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <div class="relative  overflow-hidden">
   <div x-data="{ menuOpen: false }" class="relative pt-6 pb-16 sm:pb-24">
-    {% include hamburger_menu.html %}
+    {% include nav.html %}
     <div class="max-w-7xl mx-auto pt-24 px-4 sm:px-6 lg:px-8">
       <div class="sm:flex sm:flex-col sm:align-center">
         <h1 class="text-5xl font-extrabold text-gray-900 max-w-lg mx-auto sm:text-center">{{ page.title }}</h1>
