Fix the bug where having two equal sortable ids crashed the comment reply page

--- a/_includes/cta.html
+++ b/_includes/cta.html
@@ -7,13 +7,13 @@
     <div class="mt-8 flex lg:mt-0 lg:flex-shrink-0">
       <div class="inline-flex mx-auto md:mx-0 rounded-md shadow">
         <a href="https://console.welcomments.io/"
-           data-plausible-event-name="Open Welcomments Console"
-           class="plausible-link inline-flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700">
+
+           class="inline-flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700">
           Get started
         </a>
       </div>
       <div class="ml-3 inline-flex rounded-md shadow">
-        <a href="https://blog.welcomments.io/introducing-welcomments" target="_blank" class="inline-flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium rounded-md text-indigo-600 bg-white hover:bg-indigo-50">
+        <a href="/blog/introducing-welcomments" class="inline-flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium rounded-md text-indigo-600 bg-white hover:bg-indigo-50">
           Live demo
         </a>
       </div>
