--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -24,6 +24,7 @@
       <a href="/" class="font-medium text-gray-500 hover:text-gray-900">Home</a>
       <a href="/pricing" class="font-medium text-gray-500 hover:text-gray-900">Pricing</a>
       <a href="/blog" class="font-medium text-gray-500 hover:text-gray-900">Blog</a>
+      <a href="https://status.welcomments.io" class="font-medium text-gray-500 hover:text-gray-900">Status</a>
     </div>
     <div class="hidden md:absolute md:flex md:items-center md:justify-end md:inset-y-0 md:right-0">
       <span class="inline-flex rounded-md shadow">
@@ -71,6 +72,9 @@
 
       <a href="/blog"
          class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-gray-900 hover:bg-gray-50">Blog</a>
+
+      <a href="https://status.welcomments.io"
+         class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-gray-900 hover:bg-gray-50">Status</a>
     </div>
     <a href="https://console.welcomments.io/" class="block w-full px-5 py-3 text-center font-medium text-indigo-600 bg-gray-50 hover:bg-gray-100">
       Log in
