Yay for dark mode :-)

--- a/_includes/easy_setup.html
+++ b/_includes/easy_setup.html
@@ -1,11 +1,11 @@
-<div class="relative bg-gray-50 pt-16 overflow-hidden sm:pt-24 lg:pt-32">
+<div class="relative bg-gray-50 dark:bg-gray-800 pt-16 overflow-hidden sm:pt-24 lg:pt-32">
   <div class="mx-auto max-w-md px-4 text-center sm:px-6 sm:max-w-3xl lg:px-8 lg:max-w-7xl">
     <div>
-      <h2 class="text-base font-semibold tracking-wider text-indigo-600 uppercase">Easy installation</h2>
-      <p class="mt-2 text-3xl font-extrabold text-gray-900 tracking-tight sm:text-4xl">
+      <h2 class="text-base font-semibold tracking-wider text-indigo-600 dark:text-indigo-200 uppercase">Easy installation</h2>
+      <p class="mt-2 text-3xl font-extrabold text-gray-900 dark:text-gray-50 tracking-tight sm:text-4xl">
         Set it up in minutes, not hours
       </p>
-      <p class="mt-5 max-w-prose mx-auto text-xl text-gray-500">
+      <p class="mt-5 max-w-prose mx-auto text-xl text-gray-500 dark:text-gray-400">
         Click some buttons and you're done. We'll make a pull request that has everything you need.
       </p>
     </div>
