--- a/_includes/statistics.html
+++ b/_includes/statistics.html
@@ -1,28 +1,28 @@
-<div class="px-4 pb-24">
-  <dl class="mx-auto max-w-3xl my-5 grid gap-5 grid-cols-3">
-    <div class="px-4 py-5 bg-white shadow rounded-lg overflow-hidden sm:p-6">
-      <dt class="text-sm font-medium text-gray-500 truncate">
+<div class="px-4 pb-24 bg-white dark:bg-gray-775">
+  <dl class="mx-auto max-w-3xl py-5 grid gap-5 grid-cols-3">
+    <div class="px-4 py-5 bg-white dark:bg-gray-725 shadow rounded-lg overflow-hidden sm:p-6">
+      <dt class="text-sm font-medium text-gray-500 dark:text-gray-400 truncate">
         Websites
       </dt>
-      <dd class="mt-1 text-3xl font-semibold text-gray-900" id="website-count">
+      <dd class="mt-1 text-3xl font-semibold text-gray-900 dark:text-gray-50" id="website-count">
         12
       </dd>
     </div>
 
-    <div class="px-4 py-5 bg-white shadow rounded-lg overflow-hidden sm:p-6">
-      <dt class="text-sm font-medium text-gray-500 truncate">
+    <div class="px-4 py-5 bg-white dark:bg-gray-725 shadow rounded-lg overflow-hidden sm:p-6">
+      <dt class="text-sm font-medium text-gray-500 dark:text-gray-400 truncate">
         Spam prevented
       </dt>
-      <dd class="mt-1 text-3xl font-semibold text-gray-900" id="spam-comment-count">
+      <dd class="mt-1 text-3xl font-semibold text-gray-900 dark:text-gray-50" id="spam-comment-count">
         148
       </dd>
     </div>
 
-    <div class="px-4 py-5 bg-white shadow rounded-lg overflow-hidden sm:p-6">
-      <dt class="text-sm font-medium text-gray-500 truncate">
+    <div class="px-4 py-5 bg-white dark:bg-gray-725 shadow rounded-lg overflow-hidden sm:p-6">
+      <dt class="text-sm font-medium text-gray-500 dark:text-gray-400 truncate">
         Delivered comments
       </dt>
-      <dd class="mt-1 text-3xl font-semibold text-gray-900" id="delivered-comment-count">
+      <dd class="mt-1 text-3xl font-semibold text-gray-900 dark:text-gray-50" id="delivered-comment-count">
         123
       </dd>
     </div>
