--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -1,17 +1,17 @@
 ---
 layout: default
 ---
-<div class="relative  overflow-hidden">
+<div class="relative overflow-hidden">
   <div x-data="{ menuOpen: false }" class="relative pt-6 pb-16 sm:pb-24">
     {% include nav.html %}
     <div class="max-w-7xl mx-auto pt-24 px-4 sm:px-6 lg:px-8">
       <div class="sm:flex sm:flex-col sm:align-center">
-        <h1 class="text-5xl font-extrabold text-gray-900 max-w-lg mx-auto sm:text-center">{{ page.title }}</h1>
-        <p class="mt-5 text-xl text-gray-500 sm:text-center max-w-lg mx-auto">{{ page.description }}</p>
+        <h1 class="text-5xl font-extrabold text-gray-900 dark:text-gray-50 max-w-lg mx-auto sm:text-center">{{ page.title }}</h1>
+        <p class="mt-5 text-xl text-gray-500 dark:text-gray-400 sm:text-center max-w-lg mx-auto">{{ page.description }}</p>
       </div>
     </div>
 
-    <div class="relative py-16 bg-white overflow-hidden">
+    <div class="relative py-16 bg-white dark:bg-gray-800 overflow-hidden">
       {{ content }}
     </div>
   </div>
