--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
     <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
     {% seo %}
 </head>
-<body>
+<body class="dark:bg-gray-800">
 <section>
     {{ content }}
 </section>
