--- a/_includes/features.html
+++ b/_includes/features.html
@@ -1,8 +1,8 @@
-<div class="bg-white">
+<div class="bg-white dark:bg-gray-775">
   <div class="max-w-7xl mx-auto py-16 px-4 sm:px-6 lg:py-24 lg:px-8">
     <div class="max-w-3xl mx-auto text-center">
-      <h2 class="text-3xl font-extrabold text-gray-900">{{ site.data.features.label }}</h2>
-      <p class="mt-4 text-lg text-gray-500">{{ site.data.features.title }}</p>
+      <h2 class="text-3xl font-extrabold text-gray-900 dark:text-gray-50">{{ site.data.features.label }}</h2>
+      <p class="mt-4 text-lg text-gray-500 dark:text-gray-400">{{ site.data.features.title }}</p>
     </div>
     <dl class="mt-12 space-y-10 sm:space-y-0 sm:grid sm:grid-cols-2 sm:gap-x-6 sm:gap-y-12 lg:grid-cols-4 lg:gap-x-8">
       {% for feature in site.data.features.features %}
@@ -12,10 +12,10 @@
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
         </svg>
         <div class="ml-3">
-          <dt class="text-lg leading-6 font-medium text-gray-900">
+          <dt class="text-lg leading-6 font-medium text-gray-900 dark:text-gray-50">
             {{ feature.title | markdownify }}
           </dt>
-          <dd class="mt-2 text-base text-gray-500">
+          <dd class="mt-2 text-base text-gray-500 dark:text-gray-400">
             {{ feature.description | markdownify }}
           </dd>
         </div>
