--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,28 +1,28 @@
-<footer class="bg-white">
+<footer class="bg-white dark:bg-gray-800">
   <div class="max-w-7xl mx-auto py-12 px-4 overflow-hidden sm:px-6 lg:px-8">
     <nav class="-mx-5 -my-2 flex flex-wrap justify-center" aria-label="Footer">
       <div class="px-5 py-2">
-        <a href="/" class="text-base text-gray-500 hover:text-gray-900">
+        <a href="/" class="text-base text-gray-500 hover:text-gray-900 dark:text-gray-300 dark:hover:text-gray-400">
           Home
         </a>
       </div>
       <div class="px-5 py-2">
-        <a href="/pricing" class="text-base text-gray-500 hover:text-gray-900">
+        <a href="/pricing" class="text-base text-gray-500 hover:text-gray-900 dark:text-gray-300 dark:hover:text-gray-400">
           Pricing
         </a>
       </div>
       <div class="px-5 py-2">
-        <a href="/terms" class="text-base text-gray-500 hover:text-gray-900">
+        <a href="/terms" class="text-base text-gray-500 hover:text-gray-900 dark:text-gray-300 dark:hover:text-gray-400">
           Terms
         </a>
       </div>
       <div class="px-5 py-2">
-        <a href="/privacy" class="text-base text-gray-500 hover:text-gray-900">
+        <a href="/privacy" class="text-base text-gray-500 hover:text-gray-900 dark:text-gray-300 dark:hover:text-gray-400">
           Privacy
         </a>
       </div>
       <div class="px-5 py-2">
-        <a href="https://status.welcomments.io/" class="text-base text-gray-500 hover:text-gray-900">
+        <a href="https://status.welcomments.io/" class="text-base text-gray-500 hover:text-gray-900 dark:text-gray-300 dark:hover:text-gray-400">
           Status
         </a>
       </div>
