--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -21,15 +21,15 @@
       </div>
     </div>
     <div class="hidden md:flex md:space-x-10">
-      <a href="/" class="font-medium text-gray-500 hover:text-gray-900">Home</a>
-      <a href="/pricing" class="font-medium text-gray-500 hover:text-gray-900">Pricing</a>
-      <a href="/blog" class="font-medium text-gray-500 hover:text-gray-900">Blog</a>
-      <a href="https://status.welcomments.io" class="font-medium text-gray-500 hover:text-gray-900">Status</a>
+      <a href="/" class="font-medium text-gray-500 hover:text-gray-900 dark:text-gray-300 dark:hover:text-gray-400">Home</a>
+      <a href="/pricing" class="font-medium text-gray-500 hover:text-gray-900 dark:text-gray-300 dark:hover:text-gray-400">Pricing</a>
+      <a href="/blog" class="font-medium text-gray-500 hover:text-gray-900 dark:text-gray-300 dark:hover:text-gray-400">Blog</a>
+      <a href="https://status.welcomments.io" class="font-medium text-gray-500 hover:text-gray-900 dark:text-gray-300 dark:hover:text-gray-400">Status</a>
     </div>
     <div class="hidden md:absolute md:flex md:items-center md:justify-end md:inset-y-0 md:right-0">
       <span class="inline-flex rounded-md shadow">
         <a href="https://console.welcomments.io/"
-           class="inline-flex items-center px-4 py-2 border border-transparent text-base font-medium rounded-md text-indigo-600 bg-white hover:bg-gray-50">
+           class="inline-flex items-center px-4 py-2 border border-transparent text-base font-medium rounded-md text-indigo-600 dark:text-indigo-400 bg-white dark:bg-gray-700 hover:bg-gray-50 dark:hover:bg-gray-900">
           Log in
         </a>
       </span>
