--- a/_layouts/legalese.html
+++ b/_layouts/legalese.html
@@ -6,12 +6,12 @@ layout: default
     {% include nav.html %}
     <div class="max-w-7xl mx-auto pt-24 px-4 sm:px-6 lg:px-8">
       <div class="sm:flex sm:flex-col sm:align-center">
-        <h1 class="text-5xl font-extrabold text-gray-900 max-w-lg mx-auto sm:text-center">{{ page.title }}</h1>
-        <p class="mt-5 text-xl text-gray-500 sm:text-center max-w-lg mx-auto">{{ page.description }}</p>
+        <h1 class="text-5xl font-extrabold text-gray-900 dark:text-gray-50 max-w-lg mx-auto sm:text-center">{{ page.title }}</h1>
+        <p class="mt-5 text-xl text-gray-500 dark:text-gray-400 sm:text-center max-w-lg mx-auto">{{ page.description }}</p>
       </div>
     </div>
 
-    <div class="relative py-16 bg-white overflow-hidden">
+    <div class="relative py-16 bg-white dark:bg-gray-800 overflow-hidden">
       <div class="hidden lg:block lg:absolute lg:inset-y-0 lg:h-full lg:w-full">
         <div class="relative h-full text-lg max-w-prose mx-auto" aria-hidden="true">
           <svg class="absolute top-12 left-full transform translate-x-32" width="404" height="384" fill="none"
@@ -19,7 +19,7 @@ layout: default
             <defs>
               <pattern id="74b3fd99-0a6f-4271-bef2-e80eeafdf357" x="0" y="0" width="20" height="20"
                        patternUnits="userSpaceOnUse">
-                <rect x="0" y="0" width="4" height="4" class="text-gray-200" fill="currentColor"/>
+                <rect x="0" y="0" width="4" height="4" class="text-gray-200 dark:text-gray-750" fill="currentColor"/>
               </pattern>
             </defs>
             <rect width="404" height="384" fill="url(#74b3fd99-0a6f-4271-bef2-e80eeafdf357)"/>
@@ -29,7 +29,7 @@ layout: default
             <defs>
               <pattern id="f210dbf6-a58d-4871-961e-36d5016a0f49" x="0" y="0" width="20" height="20"
                        patternUnits="userSpaceOnUse">
-                <rect x="0" y="0" width="4" height="4" class="text-gray-200" fill="currentColor"/>
+                <rect x="0" y="0" width="4" height="4" class="text-gray-200 dark:text-gray-750" fill="currentColor"/>
               </pattern>
             </defs>
             <rect width="404" height="384" fill="url(#f210dbf6-a58d-4871-961e-36d5016a0f49)"/>
@@ -39,7 +39,7 @@ layout: default
             <defs>
               <pattern id="d3eb07ae-5182-43e6-857d-35c643af9034" x="0" y="0" width="20" height="20"
                        patternUnits="userSpaceOnUse">
-                <rect x="0" y="0" width="4" height="4" class="text-gray-200" fill="currentColor"/>
+                <rect x="0" y="0" width="4" height="4" class="text-gray-200 dark:text-gray-750" fill="currentColor"/>
               </pattern>
             </defs>
             <rect width="404" height="384" fill="url(#d3eb07ae-5182-43e6-857d-35c643af9034)"/>
@@ -47,7 +47,7 @@ layout: default
         </div>
       </div>
       <div class="relative px-4 sm:px-6 lg:px-8">
-        <div class="mt-6 prose prose-indigo prose-md text-gray-500 mx-auto">
+        <div class="mt-6 prose prose-indigo dark:prose-light prose-md mx-auto">
           {{ content }}
         </div>
       </div>
