Remove YouTube video embed for better landing page privacy

--- a/_includes/easy_setup.html
+++ b/_includes/easy_setup.html
@@ -10,7 +10,9 @@
       </p>
     </div>
     <div class="mt-12">
-      <iframe width="560" height="315" class="mx-auto rounded-lg shadow-xl ring-1 ring-black ring-opacity-5" src="https://www.youtube-nocookie.com/embed/AIG7LTOrd1Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <a class="inline-block" href="https://youtu.be/AIG7LTOrd1Q" target="_blank" rel="nofollow">
+        <img class="mx-auto rounded-lg shadow-xl ring-1 ring-black ring-opacity-5" src="{{ "img/easy-setup.png" | relative_url }}" />
+      </a>
     </div>
   </div>
 </div>
