--- a/_includes/how_it_works.html
+++ b/_includes/how_it_works.html
@@ -20,7 +20,7 @@
       </div>
       <div class="mt-12 sm:mt-16 lg:mt-0">
         <div class="pl-4 -mr-48 sm:pl-6 md:-mr-16 lg:px-0 lg:m-0 lg:relative lg:h-full">
-          <img class="mx-auto rounded-xl shadow-xl ring-1 ring-black ring-opacity-5 lg:absolute lg:left-0 lg:w-auto lg:max-w-none" src="{{ "img/comment-form.png" | relative_url }}" alt="Inbox user interface">
+          <img class="mx-auto rounded-xl shadow-xl ring-1 ring-black ring-opacity-5 lg:absolute lg:left-0 lg:w-auto lg:max-w-none" src="{{ "img/comment-form.jpg" | relative_url }}" alt="Inbox user interface">
         </div>
       </div>
     </div>
@@ -48,7 +48,7 @@
       </div>
       <div class="mt-12 sm:mt-16 lg:mt-0 lg:col-start-1">
         <div class="pr-4 mx-8 sm:pr-6 -ml-4 lg:px-0 lg:m-0 lg:relative lg:h-full">
-          <img class="mx-auto rounded-xl shadow-xl ring-1 ring-black ring-opacity-5 lg:absolute lg:right-0 lg:w-auto lg:max-w-none" src="{{ "img/comment-github.png" | relative_url }}" alt="Customer profile user interface">
+          <img class="mx-auto rounded-xl shadow-xl ring-1 ring-black ring-opacity-5 lg:absolute lg:right-0 lg:w-auto lg:max-w-none" src="{{ "img/comment-github.jpg" | relative_url }}" alt="Customer profile user interface">
         </div>
       </div>
     </div>
@@ -76,7 +76,7 @@
       </div>
       <div class="mt-12 sm:mt-16 lg:mt-0">
         <div class="px-4 -mr-16 lg:px-0 lg:relative">
-          <img class="mx-auto rounded-xl shadow-xl ring-1 ring-black ring-opacity-5 lg:absolute lg:top-0 lg:left-0 lg:w-auto lg:max-w-none" src="{{ "img/comment-code.png" | relative_url }}" alt="Inbox user interface">
+          <img class="mx-auto rounded-xl shadow-xl ring-1 ring-black ring-opacity-5 lg:absolute lg:top-0 lg:left-0 lg:w-auto lg:max-w-none" src="{{ "img/comment-code.jpg" | relative_url }}" alt="Inbox user interface">
         </div>
       </div>
     </div>
