s/easy-setup.png/easy-setup.jpg

--- a/_includes/easy_setup.html
+++ b/_includes/easy_setup.html
@@ -11,7 +11,7 @@
     </div>
     <div class="mt-12">
       <a class="inline-block" href="https://youtu.be/AIG7LTOrd1Q" target="_blank" rel="nofollow">
-        <img class="mx-auto rounded-lg shadow-xl ring-1 ring-black ring-opacity-5" src="{{ "img/easy-setup.png" | relative_url }}" />
+        <img class="mx-auto rounded-lg shadow-xl ring-1 ring-black ring-opacity-5" src="{{ "img/easy-setup.jpg" | relative_url }}" />
       </a>
     </div>
   </div>
