Add links for the documentation site

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -22,6 +22,11 @@
         </a>
       </div>
       <div class="px-5 py-2">
+        <a href="https://welcomments.io/docs" class="text-base text-gray-500 hover:text-gray-900 dark:text-gray-300 dark:hover:text-gray-400">
+          Documentation
+        </a>
+      </div>
+      <div class="px-5 py-2">
         <a href="https://status.welcomments.io/" class="text-base text-gray-500 hover:text-gray-900 dark:text-gray-300 dark:hover:text-gray-400">
           Status
         </a>
