--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -23,8 +23,8 @@
     <div class="hidden md:flex md:space-x-10">
       <a href="/" class="font-medium text-gray-500 hover:text-gray-900 dark:text-gray-300 dark:hover:text-gray-400">Home</a>
       <a href="/pricing" class="font-medium text-gray-500 hover:text-gray-900 dark:text-gray-300 dark:hover:text-gray-400">Pricing</a>
+      <a href="https://welcomments.io/docs" class="font-medium text-gray-500 hover:text-gray-900 dark:text-gray-300 dark:hover:text-gray-400">Documentation</a>
       <a href="/blog" class="font-medium text-gray-500 hover:text-gray-900 dark:text-gray-300 dark:hover:text-gray-400">Blog</a>
-      <a href="https://status.welcomments.io" class="font-medium text-gray-500 hover:text-gray-900 dark:text-gray-300 dark:hover:text-gray-400">Status</a>
     </div>
     <div class="hidden md:absolute md:flex md:items-center md:justify-end md:inset-y-0 md:right-0">
       <span class="inline-flex rounded-md shadow">
@@ -70,11 +70,11 @@
       <a href="/pricing"
          class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 dark:text-gray-200 hover:text-gray-900 dark:hover:text-gray-200 hover:bg-gray-50 dark:hover:bg-gray-800">Pricing</a>
 
+      <a href="https://welcomments.io/docs"
+         class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 dark:text-gray-200 hover:text-gray-900 dark:hover:text-gray-200 hover:bg-gray-50 dark:hover:bg-gray-800">Documentation</a>
+
       <a href="/blog"
          class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 dark:text-gray-200 hover:text-gray-900 dark:hover:text-gray-200 hover:bg-gray-50 dark:hover:bg-gray-800">Blog</a>
-
-      <a href="https://status.welcomments.io"
-         class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 dark:text-gray-200 hover:text-gray-900 dark:hover:text-gray-200 hover:bg-gray-50 dark:hover:bg-gray-800">Status</a>
     </div>
     <a href="https://console.welcomments.io/" class="block w-full px-5 py-3 text-center font-medium text-indigo-600 dark:text-gray-50 bg-gray-50 hover:bg-gray-100 dark:bg-gray-700 dark:hover:bg-gray-725">
       Log in
