--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -28,7 +28,7 @@
     </div>
     <div class="hidden md:absolute md:flex md:items-center md:justify-end md:inset-y-0 md:right-0">
       <span class="inline-flex rounded-md shadow">
-        <a href="https://console.welcomments.io/"
+        <a href="https://app.welcomments.io/"
            class="inline-flex items-center px-4 py-2 border border-transparent text-base font-medium rounded-md text-indigo-600 dark:text-indigo-400 bg-white dark:bg-gray-700 hover:bg-gray-50 dark:hover:bg-gray-900">
           Log in
         </a>
@@ -76,7 +76,7 @@
       <a href="/blog"
          class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 dark:text-gray-200 hover:text-gray-900 dark:hover:text-gray-200 hover:bg-gray-50 dark:hover:bg-gray-800">Blog</a>
     </div>
-    <a href="https://console.welcomments.io/" class="block w-full px-5 py-3 text-center font-medium text-indigo-600 dark:text-gray-50 bg-gray-50 hover:bg-gray-100 dark:bg-gray-700 dark:hover:bg-gray-725">
+    <a href="https://app.welcomments.io/" class="block w-full px-5 py-3 text-center font-medium text-indigo-600 dark:text-gray-50 bg-gray-50 hover:bg-gray-100 dark:bg-gray-700 dark:hover:bg-gray-725">
       Log in
     </a>
   </div>
