--- a/_includes/cta.html
+++ b/_includes/cta.html
@@ -6,7 +6,7 @@
     </h2>
     <div class="mt-8 flex lg:mt-0 lg:flex-shrink-0">
       <div class="inline-flex mx-auto md:mx-0 rounded-md shadow">
-        <a href="https://console.welcomments.io/"
+        <a href="https://app.welcomments.io/"
            class="inline-flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 dark:bg-indigo-700 hover:bg-indigo-700 dark:hover:bg-indigo-800">
           Get started
         </a>
