--- a/_includes/cta.html
+++ b/_includes/cta.html
@@ -2,17 +2,19 @@
   <div class="max-w-7xl mx-auto py-12 px-4 sm:px-6 lg:py-24 lg:px-8 lg:flex lg:items-center lg:justify-between">
     <h2 class="text-3xl font-extrabold tracking-tight text-gray-900 md:text-4xl">
       <span class="text-center md:text-left block dark:text-gray-50">Ready to dive in?</span>
-      <span class="text-center md:text-left block text-indigo-600 dark:text-indigo-500">Start receiving comments today.</span>
+      <span class="text-center md:text-left block text-indigo-600 dark:text-indigo-500">Start receiving comments
+        today.</span>
     </h2>
     <div class="mt-8 flex lg:mt-0 lg:flex-shrink-0">
       <div class="inline-flex mx-auto md:mx-0 rounded-md shadow">
-        <a href="https://app.welcomments.io/"
-           class="inline-flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 dark:bg-indigo-700 hover:bg-indigo-700 dark:hover:bg-indigo-800">
+        <a href="https://console.welcomments.io/"
+          class="inline-flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 dark:bg-indigo-700 hover:bg-indigo-700 dark:hover:bg-indigo-800">
           Get started
         </a>
       </div>
       <div class="ml-3 inline-flex rounded-md shadow">
-        <a href="/blog/april-2021-recap#welcomments__container" class="inline-flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium rounded-md text-indigo-600 bg-white hover:bg-indigo-50 dark:bg-gray-700 hover:bg-gray-50 dark:hover:bg-gray-900 dark:text-indigo-400">
+        <a href="/blog/april-2021-recap#welcomments__container"
+          class="inline-flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium rounded-md text-indigo-600 bg-white hover:bg-indigo-50 dark:bg-gray-700 hover:bg-gray-50 dark:hover:bg-gray-900 dark:text-indigo-400">
           Live demo
         </a>
       </div>
