--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -4,32 +4,36 @@
       <div class="flex items-center justify-between w-full md:w-auto">
         <a href="/" class="flex items-center">
           <span class="sr-only">Welcomments</span>
-          <img class="h-8 w-auto sm:h-10" src="{{ "img/logo-indigo.svg" | relative_url }}" alt="">
+          <img class="h-8 w-auto sm:h-10" src="{{ " img/logo-indigo.svg" | relative_url }}" alt="">
         </a>
         <div class="-mr-2 flex items-center md:hidden">
           <button @click="menuOpen = true" type="button"
-                  class="bg-gray-50 dark:bg-gray-750 rounded-md p-2 inline-flex items-center justify-center text-gray-400 hover:text-gray-500 hover:bg-gray-100 dark:hover:bg-gray-750 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500"
-                  aria-expanded="false">
+            class="bg-gray-50 dark:bg-gray-750 rounded-md p-2 inline-flex items-center justify-center text-gray-400 hover:text-gray-500 hover:bg-gray-100 dark:hover:bg-gray-750 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500"
+            aria-expanded="false">
             <span class="sr-only">Open main menu</span>
             <!-- Heroicon name: outline/menu -->
             <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-                 stroke="currentColor" aria-hidden="true">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"/>
+              stroke="currentColor" aria-hidden="true">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
             </svg>
           </button>
         </div>
       </div>
     </div>
     <div class="hidden md:flex md:space-x-10">
-      <a href="/" class="font-medium text-gray-500 hover:text-gray-900 dark:text-gray-300 dark:hover:text-gray-400">Home</a>
-      <a href="/pricing" class="font-medium text-gray-500 hover:text-gray-900 dark:text-gray-300 dark:hover:text-gray-400">Pricing</a>
-      <a href="https://welcomments.io/docs" class="font-medium text-gray-500 hover:text-gray-900 dark:text-gray-300 dark:hover:text-gray-400">Documentation</a>
-      <a href="/blog" class="font-medium text-gray-500 hover:text-gray-900 dark:text-gray-300 dark:hover:text-gray-400">Blog</a>
+      <a href="/"
+        class="font-medium text-gray-500 hover:text-gray-900 dark:text-gray-300 dark:hover:text-gray-400">Home</a>
+      <a href="/pricing"
+        class="font-medium text-gray-500 hover:text-gray-900 dark:text-gray-300 dark:hover:text-gray-400">Pricing</a>
+      <a href="https://welcomments.io/docs"
+        class="font-medium text-gray-500 hover:text-gray-900 dark:text-gray-300 dark:hover:text-gray-400">Documentation</a>
+      <a href="/blog"
+        class="font-medium text-gray-500 hover:text-gray-900 dark:text-gray-300 dark:hover:text-gray-400">Blog</a>
     </div>
     <div class="hidden md:absolute md:flex md:items-center md:justify-end md:inset-y-0 md:right-0">
       <span class="inline-flex rounded-md shadow">
-        <a href="https://app.welcomments.io/"
-           class="inline-flex items-center px-4 py-2 border border-transparent text-base font-medium rounded-md text-indigo-600 dark:text-indigo-400 bg-white dark:bg-gray-700 hover:bg-gray-50 dark:hover:bg-gray-900">
+        <a href="https://console.welcomments.io/"
+          class="inline-flex items-center px-4 py-2 border border-transparent text-base font-medium rounded-md text-indigo-600 dark:text-indigo-400 bg-white dark:bg-gray-700 hover:bg-gray-50 dark:hover:bg-gray-900">
           Log in
         </a>
       </span>
@@ -37,46 +41,42 @@
   </nav>
 </div>
 
-<div
-  x-show="menuOpen"
-  x-transition:enter="duration-150 ease-out"
-  x-transition:enter-start="opacity-0 scale-95"
-  x-transition:enter-end="opacity-100 scale-100"
-  x-transition:leave="duration-100 ease-in"
-  x-transition:leave-start="opacity-100 scale-100"
-  x-transition:leave-end="opacity-0 scale-95"
+<div x-show="menuOpen" x-transition:enter="duration-150 ease-out" x-transition:enter-start="opacity-0 scale-95"
+  x-transition:enter-end="opacity-100 scale-100" x-transition:leave="duration-100 ease-in"
+  x-transition:leave-start="opacity-100 scale-100" x-transition:leave-end="opacity-0 scale-95"
   class="absolute top-0 inset-x-0 p-2 transition transform origin-top-right md:hidden">
   <div class="rounded-lg shadow-md bg-white dark:bg-gray-750 ring-1 ring-black ring-opacity-5 overflow-hidden">
     <div class="px-5 pt-4 flex items-center justify-between">
       <div>
-        <img class="h-8 w-auto" src="{{ "img/logo-indigo.svg" | relative_url }}" alt="">
+        <img class="h-8 w-auto" src="{{ " img/logo-indigo.svg" | relative_url }}" alt="">
       </div>
       <div class="-mr-2">
         <button @click="menuOpen = false" type="button"
-                class="bg-white dark:bg-gray-700 rounded-md p-2 inline-flex items-center justify-center text-gray-400 hover:text-gray-500 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500">
+          class="bg-white dark:bg-gray-700 rounded-md p-2 inline-flex items-center justify-center text-gray-400 hover:text-gray-500 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500">
           <span class="sr-only">Close menu</span>
           <!-- Heroicon name: outline/x -->
-          <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-               stroke="currentColor" aria-hidden="true">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"/>
+          <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"
+            aria-hidden="true">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
           </svg>
         </button>
       </div>
     </div>
     <div class="px-2 pt-2 pb-3">
       <a href="/"
-         class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 dark:text-gray-200 hover:text-gray-900 dark:hover:text-gray-200 hover:bg-gray-50 dark:hover:bg-gray-800">Home</a>
+        class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 dark:text-gray-200 hover:text-gray-900 dark:hover:text-gray-200 hover:bg-gray-50 dark:hover:bg-gray-800">Home</a>
 
       <a href="/pricing"
-         class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 dark:text-gray-200 hover:text-gray-900 dark:hover:text-gray-200 hover:bg-gray-50 dark:hover:bg-gray-800">Pricing</a>
+        class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 dark:text-gray-200 hover:text-gray-900 dark:hover:text-gray-200 hover:bg-gray-50 dark:hover:bg-gray-800">Pricing</a>
 
       <a href="https://welcomments.io/docs"
-         class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 dark:text-gray-200 hover:text-gray-900 dark:hover:text-gray-200 hover:bg-gray-50 dark:hover:bg-gray-800">Documentation</a>
+        class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 dark:text-gray-200 hover:text-gray-900 dark:hover:text-gray-200 hover:bg-gray-50 dark:hover:bg-gray-800">Documentation</a>
 
       <a href="/blog"
-         class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 dark:text-gray-200 hover:text-gray-900 dark:hover:text-gray-200 hover:bg-gray-50 dark:hover:bg-gray-800">Blog</a>
+        class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 dark:text-gray-200 hover:text-gray-900 dark:hover:text-gray-200 hover:bg-gray-50 dark:hover:bg-gray-800">Blog</a>
     </div>
-    <a href="https://app.welcomments.io/" class="block w-full px-5 py-3 text-center font-medium text-indigo-600 dark:text-gray-50 bg-gray-50 hover:bg-gray-100 dark:bg-gray-700 dark:hover:bg-gray-725">
+    <a href="https://console.welcomments.io/"
+      class="block w-full px-5 py-3 text-center font-medium text-indigo-600 dark:text-gray-50 bg-gray-50 hover:bg-gray-100 dark:bg-gray-700 dark:hover:bg-gray-725">
       Log in
     </a>
   </div>
