--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,10 +1,11 @@
+{{- assign logo_url = {{ "img/logo-indigo.svg" | relative_url }} -}}
 <div class="max-w-7xl mx-auto px-4 sm:px-6">
   <nav class="relative flex items-center justify-between sm:h-10 md:justify-center" aria-label="Global">
     <div class="flex items-center flex-1 md:absolute md:inset-y-0 md:left-0">
       <div class="flex items-center justify-between w-full md:w-auto">
         <a href="/" class="flex items-center">
           <span class="sr-only">Welcomments</span>
-          <img class="h-8 w-auto sm:h-10" src="{{ " img/logo-indigo.svg" | relative_url }}" alt="">
+          <img class="h-8 w-auto sm:h-10" src="{{ logo_url }}" alt="">
         </a>
         <div class="-mr-2 flex items-center md:hidden">
           <button @click="menuOpen = true" type="button"
@@ -48,7 +49,7 @@
   <div class="rounded-lg shadow-md bg-white dark:bg-gray-750 ring-1 ring-black ring-opacity-5 overflow-hidden">
     <div class="px-5 pt-4 flex items-center justify-between">
       <div>
-        <img class="h-8 w-auto" src="{{ " img/logo-indigo.svg" | relative_url }}" alt="">
+        <img class="h-8 w-auto" src="{{ logo_url }}" alt="">
       </div>
       <div class="-mr-2">
         <button @click="menuOpen = false" type="button"
