Use the proper assign syntax

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,4 +1,4 @@
-{{- assign logo_url = {{ "img/logo-indigo.svg" | relative_url }} -}}
+{%- assign logo_url = "img/logo-indigo.svg" | relative_url -%}
 <div class="max-w-7xl mx-auto px-4 sm:px-6">
   <nav class="relative flex items-center justify-between sm:h-10 md:justify-center" aria-label="Global">
     <div class="flex items-center flex-1 md:absolute md:inset-y-0 md:left-0">
