--- a/_includes/cta.html
+++ b/_includes/cta.html
@@ -13,7 +13,7 @@
         </a>
       </div>
       <div class="ml-3 inline-flex rounded-md shadow">
-        <a href="/blog/april-2021-recap#welcomments__container"
+        <a href="/blog/november-2021-update#welcomments__container"
           class="inline-flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium rounded-md text-indigo-600 bg-white hover:bg-indigo-50 dark:bg-gray-700 hover:bg-gray-50 dark:hover:bg-gray-900 dark:text-indigo-400">
           Live demo
         </a>
