--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,8 +4,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="/css/site.css">
     <link rel="icon" type="/image/svg+xml" href="/img/favicon.svg">
-    <script async defer data-domain="welcomments.io" src="https://plausible.io/js/plausible.js"></script>
-    <script async src="https://cdn.volument.com/v1/volument.js" onload="volument('54006dd2bc')"></script>
+    <script defer data-domain="welcomments.io" src="https://a.krankka.com/js/script.js"></script>
     <script>window.plausible = window.plausible || function() { (window.plausible.q = window.plausible.q || []).push(arguments) }</script>
     <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
     {% seo %}
